[package]
name = "bios-spi-cache"
version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
publish.workspace = true

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"

[lib]
name = "bios_spi_cache"
path = "src/lib.rs"

[features]
default = ["spi-redis"]
spi-redis = ["tardis/cache"]

[dependencies]
serde.workspace = true
tardis = { workspace = true, features = ["reldb-postgres", "web-server"] }
bios-basic = { path = "../../basic", features = ["default"] }

[dev-dependencies]
tardis = { workspace = true, features = ["test"] }
bios-basic = { path = "../../basic", features = ["default", "test"] }
