[package]
name = "bios-spi-conf"
version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
publish.workspace = true

[lib]
name = "bios_spi_conf"
path = "src/lib.rs"

[features]
default = ["spi-pg"]
spi-pg = ["tardis/reldb-postgres"]

[dependencies]
serde.workspace = true
tardis = { path = "../../../tardis/tardis", features = [
    "reldb-postgres",
    "web-server",
    "crypto",
    "web-server-grpc",
] }
bios-basic = { path = "../../basic", features = ["default"] }
lazy_static = { workspace = true }
jsonwebtoken = "8"
poem-grpc = "0.2.21"
prost = "0.11.9"
poem = "1"
prost-types = "0.11.9"
strum = { version = "0.25.0", features = ["derive"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }

[dev-dependencies]
tardis = { path = "../../../tardis/tardis", features = [
    "test",
    "conf-remote",
    "mq",
] }
bios-basic = { path = "../../basic", features = ["default", "test"] }
reqwest = "*"
[build-dependencies]
poem-grpc-build = "0.2.21"
