[package]
name = "bios-spi-conf"
version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
publish.workspace = true

[lib]
name = "bios_spi_conf"
path = "src/lib.rs"

[features]
default = ["spi-pg"]
spi-pg = ["tardis/reldb-postgres"]

[dependencies]
serde.workspace = true
tardis = { workspace = true, features = [
  "reldb-postgres",
  "web-server",
  "crypto",
  "web-server-grpc",
] }
bios-basic = { path = "../../basic", features = ["default"] }
lazy_static = { workspace = true }
jsonwebtoken = "8"
poem-grpc = { version = "0.3", optional = true }
prost-types = "0.12"
prost = "0.12"
poem = "2"
strum = { version = "0.25.0", features = ["derive"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
bios-sdk-invoke = { path = "../../sdk/invoke", features = [
  "iam",
  "macro",
], default-features = false }
ipnet = { version = "2", features = ["serde"] }
[dev-dependencies]
tardis = { workspace = true, features = ["test", "conf-remote", "mq"] }
bios-basic = { path = "../../basic", features = ["default", "test"] }
reqwest = "*"
testcontainers-modules = { workspace = true }
[build-dependencies]
poem-grpc-build = "0.3"
