[package]
name = "bios-spi-reldb"
version = "0.1.0"
authors = ["gudaoxuri <i@sunisle.org>"]
homepage = "https://bios.idealworld.group"
documentation = "https://bios.idealworld.group"
repository = "https://github.com/ideal-world/bios"
license = "Apache-2.0"
edition = "2021"
readme = "README.adoc"
publish = false

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"

[lib]
name = "bios_spi_reldb"
path = "src/lib.rs"

[features]
default = ["spi-pg"]
spi-pg = ["tardis/reldb-postgres"]
spi-mysql = ["tardis/reldb-mysql"]


[dependencies]
serde = { version = "1", features = ["derive"] }
lazy_static = { version = "1" }
tardis = { version = "0.1.0-alpha33", features = [
    "reldb-postgres",
    "web-server",
] }
bios-basic = { path = "../../basic", features = ["default"] }

[dev-dependencies]
tardis = { version = "0.1.0-alpha33", features = ["test"] }
bios-basic = { path = "../../basic", features = ["default", "test"] }
