[package]
name = "bios-spi-search"
version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
publish.workspace = true

[lib]
name = "bios_spi_search"
path = "src/lib.rs"

[features]
default = ["spi-pg", "spi-es"]
spi-pg = ["tardis/reldb-postgres"]
spi-es = ["tardis/web-client"]

[dependencies]
serde.workspace = true
tardis = { workspace = true, features = ["reldb-postgres", "web-server", "web-client", "openapi-rapidoc"] }
bios-basic = { path = "../../basic", features = ["default"] }
strum = { workerspace = true, features = ["derive"] }
pinyin =  { version = "0.10" }

[dev-dependencies]
tardis = { workspace = true, features = ["test"] }
bios-basic = { path = "../../basic", features = ["default", "test"] }
testcontainers-modules ={ workspace = true }
pinyin =  { version = "0.10" }
