[package]
name = "bios-auth"
version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
publish.workspace = true

[lib]
name = "bios_auth"
path = "src/lib.rs"

[features]
default = []
web-server = ["tardis/web-server"]

[dependencies]
serde.workspace = true
itertools.workspace = true
lazy_static.workspace = true
tardis = { workspace = true, features = [
    "cache",
    "crypto",
    "crypto-with-sm",
    "future",
] }
testcontainers-modules = { workspace = true }
[dev-dependencies]
tardis = { workspace = true, features = ["test", "web-client"] }
