[package]
name = "bios-enhance-wasm"
version = "0.1.4"
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
publish.workspace = true

[lib]
name = "bios_enhance_wasm"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde.workspace = true
lazy_static.workspace = true

console_error_panic_hook.workspace = true
# TODO
wee_alloc.workspace = true
wasm-bindgen.workspace = true
serde-wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
web-sys.workspace = true

base64.workspace = true
hex.workspace = true
libsm.workspace = true
num-bigint.workspace = true
getrandom.workspace = true
# TODO
rand = { version = "0.8" }
rand_core = { version = "0.6" }

#[cfg(not(target_arch = "wasm32"))]
serde_json.workspace = true

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
