[package]
name = "bios-reach"
version.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
publish.workspace = true

[lib]
name = "bios_reach"
path = "src/lib.rs"

[features]
default = []
simple-client = []

[dependencies]
serde.workspace = true
lazy_static.workspace = true
tardis = { workspace = true, features = [
    "reldb-postgres",
    "web-server",
    "mail",
    "mq",
] }
bios-basic = { path = "../../basic", features = ["default"] }
bios-sdk-invoke = { path = "../../sdk/invoke", features = [
    "iam",
], default-features = false }
[dev-dependencies]
tardis = { workspace = true, features = ["test"] }

bios-basic = { path = "../../basic", features = ["default", "test"] }

bios-reach = { path = "./", features = ["simple-client"] }

simple-invoke-client-macro = { path = "../../sdk/simple-invoke-client-macro" }