[package]
name = "bios-baas-iam"
version = "0.1.0"
authors = ["gudaoxuri"]
description = "BIOS project BaaS IAM"
keywords = ["bios", "iam", "ident", "auth", "user"]
homepage = "https://bios.idealworld.group/framework"
repository = "https://github.com/ideal-world/bios"
license = "Apache-2.0"
edition = "2018"
readme = "README.adoc"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"

[lib]
name = "bios_baas_iam"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
derive_more = "^0"
log = "^0"
chrono = { version = "^0", features = ["serde"] }
strum = { version = "^0", features = ["derive"] }
itertools = "^0"
regex = "^1"
lazy_static = "^1"
async-trait = "^0"

bios-framework = { path = "../../../framework", features = ["web-client", "openapi", "reldb", "cache", "test"] }
actix-web = { version = "4.0.0-beta.9", default-features = false, features = ["compress-gzip", "rustls"] }
validator = { version = "^0", features = ["derive"] }
actix-web-validator = "^2"

sea-query = { version = "^0", default-features = false, features = ["derive", "backend-mysql", "sqlx-mysql", "with-chrono"] }
sqlx = { version = "^0", default-features = false, features = ["macros", "mysql", "chrono", "runtime-tokio-native-tls"] }

[dev-dependencies]
awc = { version = "3.0.0-beta.8", features = ["rustls"] }
actix-rt = "^2"
testcontainers = "^0"

