[package]
name = "baas-all"
version = "0.1.0"
authors = ["gudaoxuri <i@sunisle.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bios-framework = { path = "../../../framework" }
actix-web = { version = "3", default-features = false, features = ["compress"] }

